--- a/style.css
+++ b/style.css
@@ -1,44 +1,62 @@
 body {
     margin: 0;
     padding: 0;
-}
-
-.container {
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+}
+
+#left {
+    display: flex;
+    flex-direction: column;
+    position: relative;
     justify-content: center;
+    width: 40%;
 }
 .redwood-img {
     height: 100vh;
+    display: flex;
 }
-.logo-img {
-    width: 50px;
+#logo {
+    display: flex;
+    height: 15%;
     position: absolute;
-    left: 25%;
-    bottom: 50%;
-    transform: translate(-50%, -50%);
-}
-.logo-background {
+    width: 100%;
+    top: 25%;
+    justify-content: center;
     background-color: black;
-    opacity: 0.5;
-    position: absolute;
-    width: 40%;
-    height: 100px;
-    left: 25%;
-    bottom: 46%;
-    transform: translate(-50%, -50%);
+    opacity: 60%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-.image_text {
+#logo-text {
+    color: white;
+    height: 100%;
+    font-size: 5.5rem;
+    margin: 0;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+#credit {
     color: white;
     position: absolute;
-    left: 15%;
-    bottom: 3%;
+    left: 5%;
+    right: 5%;
+    bottom: 1%;
+    text-align: center;
 }
 
-.right {
+#right {
+    display: flex;
+    margin: 0;
+    width: 60%;
+    align-items: center;
+    flex-direction: column;
+}
+#description {
     display: flex;
     flex-direction: column;
-    background-color: yellow;
     margin: 0;
-    width: 50%;
+    font-size: 1.5rem;
+    padding: 5%;
 }
