form fields have been added

--- a/style.css
+++ b/style.css
@@ -60,3 +60,23 @@ body {
     font-size: 1.5rem;
     padding: 5%;
 }
+
+#form {
+    display: flex;
+    flex-direction: column;
+}
+#form > h1 {
+    margin: 0;
+}
+#first_name, #last_name, #email, #phone, #password, #confirm_password {
+    margin-top: 5px;
+    border: 1px solid #E5E7EB;
+}
+.label {
+    margin: 0;
+}
+.form_sec {
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
