--- a/style.css
+++ b/style.css
@@ -99,9 +99,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 100%;
+    padding-left: 60px;
+    padding-top: 50px;
 }
 button {
     color: white;
     background-color: #596D48;
-    width: 50%;
+    width: 30%;
+    padding: 2% 5% 2% 5%;
+    border-radius: 10px;
 }
